--- a/src/app/vehicle/vehicle.component.html
+++ b/src/app/vehicle/vehicle.component.html
@@ -1,5 +1,19 @@
 <h1><p>Vehicles</p></h1>
-<input type="text" [(ngModel)]="term" (keyup)="filter()">
+<input type="text" [(ngModel)]="term" (keyup)="filter()">git 
+<select [(ngModel)] ="column">
+   <option>Vehicle</option>
+   <option >manufacturer</option>
+   <option >model</option>
+   <option >type</option>
+   <option >fuel</option>
+   <option >cost</option>
+</select>
+<select [(ngModel)]="order">
+    <option >asc</option>
+    <option >desc</option>
+</select>
+<button class="btn btn-primary" (click)="sort()">Sort</button>
+
 <table class="table table-dark">
     <thead>
         <tr>
