--- a/src/app/vehicle/vehicle.component.html
+++ b/src/app/vehicle/vehicle.component.html
@@ -1,5 +1,5 @@
 <h1><p>Vehicles</p></h1>
-<input type="text" [(ngModel)]="term" (keyup)="filter()">git 
+<input type="text" [(ngModel)]="term" (keyup)="filter()">
 <select [(ngModel)] ="column">
    <option>Vehicle</option>
    <option >manufacturer</option>
@@ -14,6 +14,21 @@
 </select>
 <button class="btn btn-primary" (click)="sort()">Sort</button>
 
+<select [(ngModel)] ="limit">
+    <option>10</option>
+    <option >20</option>
+    <option >30</option>
+    <option >40</option>
+    <option >50</option>
+   
+ </select>
+ <select [(ngModel)]="page">
+     <option >1</option>
+     <option >2</option>
+     <option >3</option>
+ </select>
+ <button class="btn btn-primary" (click)="pagination()">Pagination</button>
+
 <table class="table table-dark">
     <thead>
         <tr>
@@ -24,6 +39,7 @@
             <th>Fuel</th>
             <th>Cost</th>
             <th>Image</th>
+            <th>Actions</th>
             
         </tr>
     </thead>
@@ -34,8 +50,11 @@
             <td>{{vehicle.model}}</td>
             <td>{{vehicle.type}}</td>
             <td>{{vehicle.fuel}}</td>
-            <td>{{vehicle.cost}}</td>
+            <td [ngClass]="{'green':vehicle.cost<=400,'red':vehicle.cost>500}">{{vehicle.cost}}</td>
             <td> <img src="{{vehicle.image}}" width="100px" height="100px"></td>
+            <td>
+                <button class="btn btn-danger" (click)="delete(vehicle.id)"> Delete</button>
+            </td>
             
         </tr>
     </tbody>
