--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,12 +1,7 @@
-<div > 
-    <div class="top">
-  <h1>  Social Profile</h1>
-</div>
-<div>
-<div class="card" *ngFor="let profile of profile">
-    
-        <img src="{{profile.profilePic}}" width="100px" height="100px" style="border-radius: 50px;" >
-      </div>
-    </div>
-</div>
+<h1 style="text-align: center;">Socail Profile</h1>
+<div class="container">
+  <div class="card" *ngFor="let Profile of profile">
+    <img src="{{profile.profilePic}}" width="100px" height="100px" style="border-radius: 20px;">
 
+  </div>
+</div>
