--- a/src/app/vehicle/vehicle.component.html
+++ b/src/app/vehicle/vehicle.component.html
@@ -28,6 +28,7 @@
      <option >3</option>
  </select>
  <button class="btn btn-primary" (click)="pagination()">Pagination</button>
+ <button class="btn btn-primary" routerLink="/website/create-vehicles">Create Vehicle</button>
 
 <table class="table table-dark">
     <thead>
@@ -39,7 +40,10 @@
             <th>Fuel</th>
             <th>Cost</th>
             <th>Image</th>
-            <th>Actions</th>
+            <th>View</th>
+            <th>Edit</th>
+            <th >Actions</th>
+           
             
         </tr>
     </thead>
@@ -50,9 +54,16 @@
             <td>{{vehicle.model}}</td>
             <td>{{vehicle.type}}</td>
             <td>{{vehicle.fuel}}</td>
-            <td [ngClass]="{'green':vehicle.cost<=400,'red':vehicle.cost>500}">{{vehicle.cost}}</td>
+            <td [ngClass]="{'green':vehicle.cost<=400,'red':vehicle.cost>500}">{{vehicle.cost | balance}}</td>
             <td> <img src="{{vehicle.image}}" width="100px" height="100px"></td>
-            <td>
+           
+                <td>
+                    <button class="btn btn-secondary" routerLink="/website/vehicle-details/{{vehicle.id}}">View</button>
+                </td>
+                <td>
+                    <button class="btn btn-info" routerLink="/website/edit-vehicle/{{vehicle.id}}">Edit</button>
+                </td>
+                <td>
                 <button class="btn btn-danger" (click)="delete(vehicle.id)"> Delete</button>
             </td>
             
