--- a/src/app/website/website.component.html
+++ b/src/app/website/website.component.html
@@ -20,6 +20,12 @@
         <h3 routerLink="blog">Blog</h3>
         <h3 routerLink="imdb">IMDB</h3>
         <h3 routerLink="profile">Social Profile</h3>
+        <h3 routerLink="accounts">Accounts</h3>
+        <h3 routerLink="create-vehicles">Create Vehicles</h3>
+        <h3 routerLink="student-id">Student-ID</h3>
+        <h3 routerLink="create-user">Create-User</h3>
+        <h3 routerLink="formstask">FormsTask</h3> &nbsp; <hr>
+        <button class="btn btn-light" (click)="logout()">logout</button>
         
     </div>
     <div class="right">
