--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -1,21 +1,16 @@
-
-.top{
+.container{
     width: 100%;
-    height: 15%;
-    background-color: lightgreen;
-   align-items: center;
-   display: flex;
-   justify-content: center;
-}
-.card{
-    width: 35%;
     height: 100%;
     display: flex;
-    padding: 20px;
-    margin: 20px;
-    justify-content: flex-start;
-    align-items: start;
-   align-items: center;
-
+    flex-wrap: wrap;
+    gap: 20px;
+    
 }
-
+.card{
+    width: 30%;
+    height: 60%;
+    justify-content: start;
+    align-items: center;
+    padding: 20px;
+    
+}
