--- a/src/app/website/website.component.css
+++ b/src/app/website/website.component.css
@@ -12,7 +12,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
- 
+    overflow: auto;
 }
 .right{
     width: 85%;
